<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/news_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.AndroidFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Loading panel -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_progress_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            android:elevation="55dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/dark_green"
                android:indeterminateTintMode="src_atop"
                style="?android:attr/progressBarStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- Loading panel end -->

    <androidx.cardview.widget.CardView
        android:id="@+id/other_top_article_card"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/boy"
            android:contentDescription="@string/image_top_article_other" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/textureView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="0dp"
                android:background="@color/gray1Transparent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/other_bookmark_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/colorTransparent"
                android:contentDescription="@string/actuality"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bookmark_new"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/other_top_article_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:elevation="50dp"
                android:fontFamily="@font/shadows_light"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/other_bookmark_btn"
                tools:text="Android 7 est sortie quelle sont les nouveautés ?" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/shadows_light"
        android:text="@string/last_articles"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/other_top_article_card" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_other"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="70dp"
            android:minHeight="150dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:itemCount="10"
            tools:listitem="@layout/article_item_list"/>

        <View
            android:id="@+id/textureView"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:background="@drawable/transparency_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>